--- a/public/styles.css
+++ b/public/styles.css
@@ -12,12 +12,14 @@ h1 {
   font-size: 3rem;
   position: relative;
   top: 4.4rem;
+  color: #0f3460;
 }
 
 h2 {
   margin-bottom: 0;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 4rem;
+  font-size: 3rem;
+  color: aliceblue;
 }
 
 a {
@@ -68,23 +70,41 @@ button:hover::before {
 
 .facts {
   font-family: "Kalam", cursive;
-  font-weight: 600;
-  font-size: xx-large;
+  font-weight: 400;
+  font-size: x-large;
 }
 
 #box {
   display: inline-block;
   position: absolute;
-  left: 25rem;
+  left: 0px;
+  right: 0px;
   top: 12.5rem;
   text-align: center;
   width: 50%;
   height: fit-content;
-  margin-bottom: 12.5rem;
+  margin: 0 auto 0 auto;
   font-family: cursive;
 
-  /* lets try */
+  /* lets try neuromorphism */
   border-radius: 3.125rem;
   background: #7fb77e;
   box-shadow: 20px 20px 60px #6c9c6b, -20px -20px 60px #92d291;
+}
+
+/* media queries*/
+@media (max-width: 768px) {
+  #box {
+    width: fit-content;
+    height: fit-content;
+    margin: 0 auto 0 auto;
+  }
+  .facts {
+    font-family: "Kalam", cursive;
+    font-weight: 500;
+    font-size: large;
+  }
+  h2 {
+    font-size: 3rem;
+  }
 }
